# esp32Cam

./: CMakeLists.txt  ESP32Cam.ino  Makefile  avi.cpp  avi.h  bluetooth.cpp  bluetooth.h  camera.cpp  camera.h  fat32.cpp  fat32.h  globals.h  jpg2rgb.cpp  jpg2rgb.h  motion.cpp  motion.h  partitions.csv  ringbuffer.cpp  ringbuffer.h  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  avi.cpp  bluetooth.cpp  camera.cpp  currenttime.cpp  currenttime.h  fat32.h  globals.h  jpg2rgb.cpp  main.cpp  motion.h  packet.cpp  packet.h  wifiap.cpp  wifiap.h
main/camera/: avi.h  camera.cpp  camera.h  jpg2rgb.h  motion.cpp
main/communications/: communications.cpp  communications.h  communications_command.cpp  communications_command.h  communications_command_camera.cpp  communications_command_camera.h  communications_command_delete_file.cpp  communications_command_delete_file.h  communications_command_directory.cpp  communications_command_directory.h  communications_command_ota.cpp  communications_command_ota.h  communications_command_send_file.cpp  communications_command_send_file.h  communications_globals.h
main/connections/: bluetooth.cpp  bluetooth.h  packet.cpp  packet.h  wifiap.cpp
main/crc/: crc32.cpp  crc32.h
main/fat32/: fat32.cpp
